Fix profile stats visibility in light theme

--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -159,14 +159,14 @@
 
             <!-- METRICS -->
             <div class="flex gap-6 mt-4 text-gray-500 text-sm">
-                <div class="flex items-center gap-1 cursor-pointer hover:text-white transition group"
+                <div class="flex items-center gap-1 cursor-pointer hover:text-gray-900 dark:hover:text-white transition group"
                     onclick="alert('Orbit list coming soon!')">
-                    <span id="orbitCount" class="font-bold text-white">0</span>
+                    <span id="orbitCount" class="font-bold text-gray-900 dark:text-white">0</span>
                     <span class="group-hover:underline">Orbit</span>
                 </div>
-                <div class="flex items-center gap-1 cursor-pointer hover:text-white transition group"
+                <div class="flex items-center gap-1 cursor-pointer hover:text-gray-900 dark:hover:text-white transition group"
                     onclick="alert('In Orbit list coming soon!')">
-                    <span id="inOrbitCount" class="font-bold text-white">0</span>
+                    <span id="inOrbitCount" class="font-bold text-gray-900 dark:text-white">0</span>
                     <span class="group-hover:underline">In Orbit</span>
                 </div>
             </div>
