--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -160,12 +160,12 @@
             <!-- METRICS -->
             <div class="flex gap-6 mt-4 text-gray-500 text-sm">
                 <div class="flex items-center gap-1 cursor-pointer hover:text-gray-900 dark:hover:text-white transition group"
-                    onclick="alert('Orbit list coming soon!')">
+                    onclick="openOrbitList('orbit')">
                     <span id="orbitCount" class="font-bold text-gray-900 dark:text-white">0</span>
                     <span class="group-hover:underline">Orbit</span>
                 </div>
                 <div class="flex items-center gap-1 cursor-pointer hover:text-gray-900 dark:hover:text-white transition group"
-                    onclick="alert('In Orbit list coming soon!')">
+                    onclick="openOrbitList('inOrbit')">
                     <span id="inOrbitCount" class="font-bold text-gray-900 dark:text-white">0</span>
                     <span class="group-hover:underline">In Orbit</span>
                 </div>
@@ -261,6 +261,22 @@
                     class="flex-1 bg-[#12E6E6] text-black py-3 rounded-xl font-semibold hover:opacity-90 transition">
                     Save Changes
                 </button>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <!-- USER LIST MODAL -->
+    <div id="userListModal"
+        class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black/80 backdrop-blur-sm opacity-0 transition-opacity duration-300">
+        <div id="userListContent"
+            class="bg-white dark:bg-[#121212] w-full max-w-sm rounded-2xl overflow-hidden shadow-2xl transform scale-95 transition-transform duration-300 border border-gray-200 dark:border-gray-800">
+            <div class="p-4 border-b border-gray-100 dark:border-gray-800 flex justify-between items-center">
+                <h3 id="userListTitle" class="font-bold text-lg">Orbit</h3>
+                <button onclick="closeUserListModal()" class="text-gray-500 hover:text-zynk transition">✕</button>
+            </div>
+            <div id="userListContainer" class="max-h-96 overflow-y-auto p-4 space-y-3">
+                <!-- Users injected here -->
             </div>
         </div>
     </div>
@@ -430,6 +446,7 @@
 
         // Load Social Stats
         // Load Social Stats
+        // Load Social Stats
         function loadSocialStats() {
             const orbit = getOrbit().length;
             const inOrbit = getInOrbit().length;
@@ -441,6 +458,85 @@
             if (inOrbitEl) inOrbitEl.textContent = inOrbit;
         }
         loadSocialStats();
+
+        // USER LIST MODAL LOGIC
+        const userListModal = document.getElementById('userListModal');
+        const userListContent = document.getElementById('userListContent');
+        const userListTitle = document.getElementById('userListTitle');
+        const userListContainer = document.getElementById('userListContainer');
+
+        function openOrbitList(type) {
+            const isOrbit = type === 'orbit';
+            const list = isOrbit ? getOrbit() : getInOrbit();
+            const title = isOrbit ? 'Orbit' : 'In Orbit';
+
+            userListTitle.textContent = title;
+            userListContainer.innerHTML = '';
+
+            if (list.length === 0) {
+                userListContainer.innerHTML = `<div class="text-center text-gray-500 py-8">No one here yet. 🌌</div>`;
+            } else {
+                // If Showing In Orbit (Following), we can unfollow?
+                // logic: if type == 'inOrbit', show 'Unorbit' button?
+                // complex for now, let's just show list.
+
+                list.forEach(handle => {
+                    const el = document.createElement('div');
+                    el.className = 'flex items-center gap-3 p-2 hover:bg-gray-50 dark:hover:bg-white/5 rounded-xl transition cursor-pointer';
+                    el.innerHTML = `
+                        <div class="w-10 h-10 rounded-full bg-gradient-to-tr from-gray-700 to-gray-600 flex items-center justify-center text-xs font-bold text-white">
+                            ${handle.substring(1, 3).toUpperCase()}
+                        </div>
+                        <div class="flex-1">
+                            <h4 class="font-semibold text-sm text-gray-900 dark:text-white">${handle}</h4>
+                        </div>
+                         ${type === 'inOrbit' ?
+                            `<button onclick="toggleOrbitFromList('${handle}', this)" class="text-xs border border-zynk bg-zynk text-black px-3 py-1 rounded-full hover:opacity-80 transition">In Orbit</button>`
+                            : ''}
+                    `;
+                    userListContainer.appendChild(el);
+                });
+            }
+
+            userListModal.classList.remove('hidden');
+            // Animation
+            requestAnimationFrame(() => {
+                userListModal.classList.remove('opacity-0');
+                userListContent.classList.remove('scale-95');
+                userListContent.classList.add('scale-100');
+            });
+        }
+
+        function closeUserListModal() {
+            userListModal.classList.add('opacity-0');
+            userListContent.classList.remove('scale-100');
+            userListContent.classList.add('scale-95');
+            setTimeout(() => {
+                userListModal.classList.add('hidden');
+            }, 300);
+        }
+
+        // Close on background click
+        userListModal.addEventListener('click', (e) => {
+            if (e.target === userListModal) closeUserListModal();
+        });
+
+        function toggleOrbitFromList(handle, btn) {
+            // Logic to toggle follow from the list itself
+            const nowInOrbit = toggleOrbit(handle);
+            if (!nowInOrbit) {
+                // Removed
+                btn.textContent = 'Orbit';
+                btn.classList.remove('bg-zynk', 'text-black');
+                btn.classList.add('text-zynk');
+                // Should we remove the row? Maybe just update button state is safer UX.
+            } else {
+                btn.textContent = 'In Orbit';
+                btn.classList.add('bg-zynk', 'text-black');
+                btn.classList.remove('text-zynk');
+            }
+            loadSocialStats(); // Update numbers in background
+        }
     </script>
 
 </body>
