--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -345,18 +345,24 @@
                     class="text-xs text-zynk hover:underline mt-1">Show more</button>` : ''}
             </div>
 
-            <div class="flex gap-6 mt-4 text-gray-500 text-sm">
-                <span class="hover:text-zynk transition cursor-pointer">Reply</span>
+            <div class="flex gap-6 mt-4 text-gray-500 text-sm items-center">
+                <span class="hover:text-zynk transition cursor-pointer" onclick="alert('Reply from profile coming soon!')">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
+                </span>
                 <span
-                    class="${post.allowReposts !== false ? 'hover:text-zynk transition cursor-pointer' : 'opacity-50 cursor-not-allowed'}"
-                    title="${post.allowReposts !== false ? 'Repost' : 'Reposts disabled'}">Repost</span>
+                    class="${post.allowReposts !== false ? 'hover:text-zynk transition transform hover:scale-105 cursor-pointer' : 'opacity-50 cursor-not-allowed'}"
+                    title="${post.allowReposts !== false ? 'Repost' : 'Reposts disabled'}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 1l4 4-4 4"></path><path d="M3 11V9a4 4 0 0 1 4-4h14"></path><path d="M7 23l-4-4 4-4"></path><path d="M21 13v2a4 4 0 0 1-4 4H3"></path></svg>
+                </span>
                 <div class="like-container relative">
                     <button
                         class="like-btn flex items-center gap-1 hover:text-zynk transition cursor-pointer select-none"
                         onmousedown="startLike(this)" onmouseup="cancelLike(this)" onmouseleave="cancelLike(this)"
                         ontouchstart="startLike(this)" ontouchend="cancelLike(this)">
                         <span class="like-fill"></span>
-                        <span class="like-icon">Like</span>
+                        <span class="like-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>
+                        </span>
                     </button>
                 </div>
             </div>
@@ -372,7 +378,7 @@
         function startLike(btn) {
             if (btn.classList.contains('liked')) {
                 btn.classList.remove('liked');
-                btn.querySelector('.like-icon').textContent = 'Like';
+                // btn.querySelector('.like-icon').textContent = 'Like';
                 return;
             }
 
@@ -392,7 +398,9 @@
             btn.classList.remove('holding');
             btn.classList.add('liked');
             btn.classList.add('like-pop');
-            btn.querySelector('.like-icon').textContent = 'Liked ❤️';
+            // btn.querySelector('.like-icon').textContent = 'Liked ❤️'; 
+            // Don't change text, the color change indicates liked state. 
+            // Or maybe change the SVG fill? For now, color via CSS is enough as per Feed logic.
 
             setTimeout(() => btn.classList.remove('like-pop'), 300);
 
