--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -34,6 +34,47 @@
     });
   </script>
 </head>
+<style>
+  .image-preview {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+    flex-wrap: wrap;
+  }
+
+  .image-preview img {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 12px;
+    border: 1px solid #333;
+  }
+
+  .image-box {
+    position: relative;
+  }
+
+  .remove-img {
+    position: absolute;
+    top: 6px;
+    right: 6px;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    border-radius: 50%;
+    font-size: 12px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hidden {
+    display: none;
+  }
+</style>
 
 <body class="bg-gray-50 text-gray-900 dark:bg-dark dark:text-white min-h-screen flex transition-colors duration-300">
 
@@ -71,9 +112,13 @@
       <textarea id="postInput" placeholder="Say something raw..." class="w-full bg-transparent resize-none outline-none text-lg
                placeholder-gray-500 text-gray-800 dark:text-white" rows="3"></textarea>
 
+      <!-- Image Preview Container -->
+      <div id="imagePreview" class="image-preview hidden"></div>
+
       <!-- Input Options Toolbar -->
       <div class="flex items-center gap-4 mt-3 border-t border-gray-100 dark:border-gray-800/50 pt-3">
-        <button class="text-zynk hover:text-white transition p-1.5 rounded-full hover:bg-zynk/10" title="Media">
+        <button onclick="openImagePicker()"
+          class="text-zynk hover:text-white transition p-1.5 rounded-full hover:bg-zynk/10" title="Media">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
@@ -249,6 +294,25 @@
     const feedPosts = document.getElementById('feedPosts');
     const LIMIT = 280;
 
+    // State
+    let selectedImages = [];
+
+    function updatePostButtonState() {
+      const text = input.value.trim();
+      const length = input.value.length;
+      const hasImages = selectedImages.length > 0;
+
+      counter.textContent = `${length} / ${LIMIT}`;
+
+      if (length > LIMIT) {
+        counter.classList.add('text-red-500');
+        postBtn.disabled = true;
+      } else {
+        counter.classList.remove('text-red-500');
+        postBtn.disabled = length === 0 && !hasImages;
+      }
+    }
+
     // Global User Profile (Safe Parse)
     let savedProfile = null;
     try {
@@ -269,23 +333,18 @@
     }
 
     input.addEventListener('input', () => {
-      const length = input.value.length;
-      counter.textContent = `${length} / ${LIMIT}`;
-
-      if (length > LIMIT) {
-        counter.classList.add('text-red-500');
-        postBtn.disabled = true;
-      } else {
-        counter.classList.remove('text-red-500');
-        postBtn.disabled = length === 0;
-      }
-
+      updatePostButtonState();
       detectMood(input.value);
     });
 
-    postBtn.addEventListener('click', () => {
+    postBtn.addEventListener('click', async () => {
       const text = input.value.trim();
-      if (!text) return;
+
+      // Allow post if there are images, even if no text
+      if (!text && selectedImages.length === 0) {
+        alert("Post empty hai bhai");
+        return;
+      }
 
       const expiryVal = expirySelect.value;
       const identity = identitySelect.value;
@@ -308,10 +367,6 @@
         if (hours > 0) {
           expiryTime = now + (hours * 60 * 60 * 1000);
         } else {
-          // Fallback if 0 or invalid (e.g. user typed 0) - treat as 1 hour or error? 
-          // Let's default to 1 hour if invalid custom, or maybe just 0 means expired immediately?
-          // Let's treat 0 as "Never" or prevent posting? 
-          // For now, let's assume valid > 0. If 0, it expires instantly.
           if (expiryVal === 'custom' && hours <= 0) {
             alert("Please enter a valid time");
             return;
@@ -339,9 +394,20 @@
         avatar = "";
       }
 
+      // Convert images to Base64
+      const imageAttachments = await Promise.all(selectedImages.map(file => {
+        return new Promise((resolve, reject) => {
+          const reader = new FileReader();
+          reader.onload = () => resolve(reader.result);
+          reader.onerror = reject;
+          reader.readAsDataURL(file);
+        });
+      }));
+
       const post = {
         id: crypto.randomUUID(),
         text: text,
+        images: imageAttachments, // Add images
         timestamp: now,
         expiry: expiryTime,
         author: author,
@@ -356,10 +422,67 @@
       savePost(post);
       renderPost(post, true);
 
+      // Reset
       input.value = '';
-      counter.textContent = `0 / ${LIMIT}`;
-      postBtn.disabled = true;
+      selectedImages = [];
+      renderImagePreview();
+      updatePostButtonState();
     });
+
+
+    function openImagePicker() {
+      const input = document.createElement("input");
+      input.type = "file";
+      input.accept = "image/*";
+      input.multiple = true;
+      input.click();
+
+      input.onchange = () => {
+        const files = Array.from(input.files);
+
+        files.forEach(file => {
+          if (selectedImages.length >= 4) {
+            alert("Max 4 images allowed");
+            return;
+          }
+          selectedImages.push(file);
+        });
+
+        renderImagePreview();
+        updatePostButtonState();
+      };
+    }
+
+    function renderImagePreview() {
+      const preview = document.getElementById("imagePreview");
+      preview.innerHTML = "";
+
+      if (selectedImages.length === 0) {
+        preview.classList.add("hidden");
+        return;
+      }
+
+      preview.classList.remove("hidden");
+
+      selectedImages.forEach((file, index) => {
+        const reader = new FileReader();
+        reader.onload = () => {
+          preview.innerHTML += `
+            <div class="image-box">
+              <img src="${reader.result}">
+              <div class="remove-img" onclick="removeImage(${index})">✕</div>
+            </div>
+          `;
+        };
+        reader.readAsDataURL(file);
+      });
+    }
+
+    function removeImage(index) {
+      selectedImages.splice(index, 1);
+      renderImagePreview();
+      updatePostButtonState();
+    }
 
     function savePost(post) {
       const posts = JSON.parse(localStorage.getItem('zynk_posts') || '[]');
@@ -476,6 +599,13 @@
                 <p id="text-${post.id}" class="${post.text.length > 150 ? 'line-clamp-3' : ''} whitespace-pre-wrap transition-all">${post.text}</p>
                 ${post.text.length > 150 ? `<button onclick="toggleExpand('${post.id}')" class="text-xs text-zynk hover:underline mt-1">Show more</button>` : ''}
               </div>
+
+              <!-- Render Attached Images -->
+              ${post.images && post.images.length > 0 ? `
+                  <div class="mt-3 flex gap-2 overflow-x-auto pb-2">
+                      ${post.images.map(img => `<img src="${img}" class="h-32 w-auto rounded-lg border border-gray-200 dark:border-gray-800 object-cover">`).join('')}
+                  </div>
+              ` : ''}
               
                 <div class="flex gap-6 mt-4 text-gray-500">
                 ${replyAction}
