--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -345,6 +345,13 @@
                     class="text-xs text-zynk hover:underline mt-1">Show more</button>` : ''}
             </div>
 
+            <!-- Render Attached Images -->
+            ${post.images && post.images.length > 0 ? `
+                <div class="mt-3 flex gap-2 overflow-x-auto pb-2">
+                    ${post.images.map(img => `<img src="${img}" class="h-32 w-auto rounded-lg border border-gray-200 dark:border-gray-800 object-cover">`).join('')}
+                </div>
+            ` : ''}
+
             <div class="flex gap-6 mt-4 text-gray-500 text-sm items-center">
                 <span class="hover:text-zynk transition cursor-pointer" onclick="alert('Reply from profile coming soon!')">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
