--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -398,15 +398,8 @@
           avatar = "";
         }
 
-        // Convert images to Base64
-        const imageAttachments = await Promise.all(selectedImages.map(file => {
-          return new Promise((resolve, reject) => {
-            const reader = new FileReader();
-            reader.onload = () => resolve(reader.result);
-            reader.onerror = reject;
-            reader.readAsDataURL(file);
-          });
-        }));
+        // Convert images to Base64 with Compression
+        const imageAttachments = await Promise.all(selectedImages.map(file => compressImage(file)));
 
         const post = {
           id: crypto.randomUUID(),
@@ -494,6 +487,52 @@
       selectedImages.splice(index, 1);
       renderImagePreview();
       updatePostButtonState();
+    }
+
+    // COMPRESSION UTILITY
+    function compressImage(file) {
+      return new Promise((resolve, reject) => {
+        const reader = new FileReader();
+        reader.readAsDataURL(file);
+        reader.onload = (event) => {
+          const img = new Image();
+          img.src = event.target.result;
+          img.onload = () => {
+            // Dimensions
+            const maxWidth = 800; // Good balance for mobile/feed
+            const maxHeight = 800;
+            let width = img.width;
+            let height = img.height;
+
+            // Resize logic
+            if (width > height) {
+              if (width > maxWidth) {
+                height *= maxWidth / width;
+                width = maxWidth;
+              }
+            } else {
+              if (height > maxHeight) {
+                width *= maxHeight / height;
+                height = maxHeight;
+              }
+            }
+
+            // Canvas
+            const canvas = document.createElement('canvas');
+            canvas.width = width;
+            canvas.height = height;
+
+            const ctx = canvas.getContext('2d');
+            ctx.drawImage(img, 0, 0, width, height);
+
+            // Export compressed (JPEG 0.6 is good for social feeds)
+            const dataUrl = canvas.toDataURL('image/jpeg', 0.6);
+            resolve(dataUrl);
+          };
+          img.onerror = (err) => reject(err);
+        };
+        reader.onerror = (err) => reject(err);
+      });
     }
 
     function savePost(post) {
